tests/src/frontend/typechecking/invalid/unbound_module.sk
module A;

fun main(): void {
  print_raw(M.a)
}
